screen alignment issue in planning, not able to update the destination (Route Update CO Level)

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -363,3 +363,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+#LegIDDescription {
+  /* max-width: 100px; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
